media/webrtc/signaling/src/sipcc/core/sdp/sdp_config.c
@@ -23,7 +23,8 @@ tinybool sdp_verify_conf_ptr (sdp_conf_options_t *conf_p)
     if ((conf_p != NULL) && (conf_p->magic_num == SDP_MAGIC_NUM)) {
         return (TRUE);
     } else {
-        CSFLogError(logTag, "SDP: Invalid Config pointer.");
+        CSFLogError(logTag, "SDP: Invalid Config pointer: %p (magic=0x%X)",
+                    conf_p, conf_p ? conf_p->magic_num : 0);
         return (FALSE);
     }
 }
@@ -95,6 +96,9 @@ void *sdp_init_config ()
     conf_p->num_invalid_token_order = 0;
     conf_p->num_invalid_param       = 0;
     conf_p->num_no_resource         = 0;
+
+    CSFLogInfo(logTag, "SDP: Initialized config pointer: %p (magic=0x%X)",
+                conf_p, conf_p ? conf_p->magic_num : 0);
 
     return (conf_p);
 }
